# wntgs

./: .env.example  Cargo.toml  LICENSE  README.md  init.sql
src/: main.rs  repository.rs  users.rs  web.rs
src/web/: app.rs  auth.rs  error.rs  oauth.rs  protected.rs
templates/protected/: base_protected.html  home.html  shorten.html  url_details.html  url_list.html
templates/unprotected/: base_unprotected.html  error.html  login.html
