[package]
name = "wntgs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.1", features = ["json"] }
base64 = "0.21.5"
dotenvy = "0.15.7"
nanoid = "0.4.0"
oauth2 = "4.4.2"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
sha2 = "0.10.8"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
thiserror = "1.0.51"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
