[package]
name = "wntgs"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
async-trait = "0.1.75"
axum = { version = "0.7.1", features = ["json"] }
axum-login = "0.11.0"
base64 = "0.21.5"
dotenvy = "0.15.7"
nanoid = "0.4.0"
oauth2 = "4.4.2"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
sha2 = "0.10.8"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
thiserror = "1.0.51"
time = "0.3.31"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["fs"] }
tower-sessions = { version = "0.8.2", features = ["postgres-store"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
